# MoGen

./: .gitignore  CMakeLists.txt  COPYING.txt  nsga.c  nsga.h
cmake/modules/: FindvecLib.cmake
examples/: CMakeLists.txt  houseoptim.c  moead_zdt1.c
fronts/: CMakeLists.txt  cec09UF.c
lib/: CMakeLists.txt  crossover.c  crossover.h  global_types.h  gnuplotbin.h.cmake  individual.c  individual.h  mgf_global_types.h  mgf_individual.c  mgf_individual.h  mgf_moa.c  mgf_moa.h  mgf_population.c  mgf_population.h  mgn_gnuplot.c  mgn_gnuplot.h  mgn_initializer.c  mgn_initializer.h  mgn_io.c  mgn_io.h  mgn_io_datalist.c  mgn_io_datalist.h  mgn_moa.c  mgn_moa.h  mgn_mop.c  mgn_mop.h  mgn_pareto.c  mgn_pareto.h  mgn_pop_helper.c  mgn_pop_helper.h  mgn_pop_init.h  mgn_pop_matrix.c  mgn_pop_matrix.h  mgn_pop_proto.c  mgn_pop_proto.h  mgn_poplist.c  mgn_poplist.h  mgn_random.c  mgn_random.h  mgn_test.h  (+19 more)
lib/indicator/: CMakeLists.txt  indicadores.c  indicadores.h
lib/indicator/hv/: CMakeLists.txt
lib/math/: CMakeLists.txt  array.c  array.h  gsl_extension.c  gsl_extension.h  gsl_vector_additional.c  gsl_vector_additional.h  gsl_vector_map_ops.c  gsl_vector_map_ops.h  linalg.c  linalg.h  mgn_counter.c  mgn_counter.h  moea_math.c  moea_math.h
lib/math/tests/: CMakeLists.txt  gsl_additional_test.c
lib/mops/: CMakeLists.txt  mgn_cec09.h  mgn_sphere.h  mgn_zdt.h  zdt.c  zdt.h
lib/mops/tests/: CMakeLists.txt  mgn_zdt_test.c  zdt_test.c  zdt_test.h
lib/operators/: CMakeLists.txt  crossover.c  crossover.h  gsl_kmeans.c  gsl_kmeans.h  gsl_kmeans_new.c  gsl_kmeans_new.h  mgf_dominance.c  mgf_dominance.h  mgf_mutation.c  mgf_mutation.h  mgf_operators.c  mgf_operators.h  mgf_rank.c  mgf_rank.h  mgn_cluster_m.c  mgn_cluster_m.h  mgn_fcmeans.c  mgn_fcmeans.h  mgn_gen_operator.c  mgn_gen_operator.h  mgn_rbf.c  mgn_rbf.h  mgn_selection.h  mgn_vector_distance.c  mgn_vector_distance.h  rank.c  rank.h
lib/operators/tests/: CMakeLists.txt  gsl_fcmeans_test.c  gsl_kmeans_test.c  gsl_kmeanstest.c  kmeans_test.txt  mgf_operator_test.c  mgn_optest.c  mgn_rbf_test.c  testing_set.txt  training_set.txt
lib/solvers/: CMakeLists.txt  mgf_moead.c  mgf_moead.h  mgf_nsga2.c  mgf_nsga2.h  mgf_pareto.c  mgf_pareto.h  mgn_de.c  mgn_de.h  mgn_moead-rbf.c  mgn_moead-rbf.h  mgn_moead-rbf_common.c  mgn_moead-rbf_common.h  mgn_moead.c  mgn_moead.h  mgn_moead_common.c  mgn_moead_common.h  mgn_moead_de.c  mgn_moead_de.h  mgn_moead_fcrbf.c  mgn_moead_fcrbf.h  mgn_moead_fcrbf_inv.c  mgn_moead_fcrbf_inv.h  mgn_moead_fcrbf_nn.c  mgn_moead_fcrbf_nn.h  mgn_moead_types.h  svm.c  svm.h
lib/solvers/decomposition/: mgf_scalarization.c  mgf_scalarization.h  mgf_weights.c  mgf_weights.h  mgn_scalarization.c  mgn_scalarization.h  mgn_weights.c  mgn_weights.h
lib/solvers/decomposition/tests/: mgn_scalar_test.c  testweight.c
lib/solvers/mono/: CMakeLists.txt  mgf_mono_solver.c  mgf_mono_solver.h  secant.c  secant.h
lib/tests/: CMakeLists.txt  initializertest.c  pop_test.c  population_test.c
tests/: CMakeLists.txt  callback_test.h  edtest.c  mgn_moead-rbf_test.c  mgn_moead_fcrbf_inv_test.c  mgn_moead_fcrbf_nn_test.c  mgn_moead_fcrbf_test.c  mgn_moeadtest.c  moead_de_test.c  moead_de_test_exp.c  moead_test.c  mop_mono.c  mop_test.c  nsga2_test.c
